# seo-reporting-system

./: .gitignore  AGENTS.md  README.md  README_language_and_actions.md  pyproject.toml  requirements.txt  system_prompt_v1.1.rtf
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: cli.py
app/core/: __init__.py  actions.py  config.py  doctor.py  duckdb_store.py  gsc_check.py  lake.py  locations.py  manifest.py  ops_insurance.py  payload.py  pipeline.py  policy.py  project.py  registry.py  schemas.py  time_utils.py
app/exports/: __init__.py  notion.py
app/extractors/: __init__.py  base.py  crux.py  dataforseo.py  gsc.py  pagespeed.py  rybbit.py
app/fixtures/: crux.json  dataforseo.json  gsc.json  pagespeed.json  rybbit.json
app/render/: __init__.py  report.py
app/tests/: test_doctor_connectivity.py  test_doctor_env_missing.py  test_gsc_check_cli_exit_codes.py  test_gsc_check_parsing.py  test_hard_disable_crux.py  test_ops_insurance.py  test_output_language_paths.py  test_output_writable_guard.py
app/tools/: __init__.py  no_secrets.py  render_smoke_test.py  validate_contracts.py  validate_manifest.py
app/transforms/: __init__.py  analytics.py  cwv.py  gsc.py  rankings.py
docs/: 00_scope.md  01_masterplan.md  01_quickstart.md  02_user_manual.md  03_onboarding_inputs.md  04_pilot_run.md  05_ops_insurance.md  90_research_backlog.md  IMPLEMENTATION_LAST_STEPS_v1.yaml
docs/audit/: GAPS.md  (+3 more)
registries/: metrics.yaml  notion_properties.yaml  sources.yaml
scripts/: bootstrap_local.sh  check_all.sh  validate_contracts.py
secrets/: README.md
(+28 files in other folders)
